prevent horizontall scrollbar on iPhone

--- a/src/App.scss
+++ b/src/App.scss
@@ -5,7 +5,10 @@ body {
   cursor: default;
   font-family: 'Montserrat', sans-serif;
   background: #0f0f0f !important;
+}
 
+html, body {
+  max-width: 100% !important;
   overflow-x: hidden !important;
 }
 
